--- a/Espanol/bikes-ES.html
+++ b/Espanol/bikes-ES.html
@@ -160,10 +160,10 @@
                             <div class="portfolio-details-slider swiper-container">
                                 <div class="photo-slide swiper-wrapper">
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/bikes/bike1.png" alt="">
+                                        <img src="../img/Portfolio/bikes/bike1.png" alt="Diseño de biciletero urbano con espacio publicitario">
                                     </div>                    
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/bikes/bike2.png" alt="">
+                                        <img src="../img/Portfolio/bikes/bike2.png" alt="Diseño de biciletero urbano con espacio publicitario">
                                     </div>            
                                 </div>
                                 <div class="swiper-pagination"></div>
