--- a/Espanol/coco-ES.html
+++ b/Espanol/coco-ES.html
@@ -159,25 +159,25 @@
                             <div class="portfolio-details-slider swiper-container">
                                 <div class="photo-slide swiper-wrapper">
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/envace/coco-04.png" alt="">
+                                        <img src="../img/Portfolio/coconut/envace/coco-04.png" alt="Familia de producto de leche de coco Celebes">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/envace/coco-01.png" alt="">
+                                        <img src="../img/Portfolio/coconut/envace/coco-01.png" alt="Detalle del rosca de envace de leche de coco">
                                     </div>                    
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/envace/coco-02.png" alt="">
+                                        <img src="../img/Portfolio/coconut/envace/coco-02.png" alt="sachetes para rellenado de leche de coco">
                                     </div>                    
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/envace/coco-03.png" alt="">
+                                        <img src="../img/Portfolio/coconut/envace/coco-03.png" alt="envase de leche de coco">
                                     </div>                                                                       
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/envace/coco-05.png" alt="">
+                                        <img src="../img/Portfolio/coconut/envace/coco-05.png" alt="Detalle de pico de envase de leche de coco">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/envace/coco-06.png" alt="">
+                                        <img src="../img/Portfolio/coconut/envace/coco-06.png" alt="Detalle de fecha de envase de leche de coco">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/envace/coco-07.png" alt="">
+                                        <img src="../img/Portfolio/coconut/envace/coco-07.png" alt="Caja contendora de envase de leche de coco">
                                     </div>                                    
                                 </div>
                                 <div class="swiper-pagination"></div>
@@ -213,22 +213,22 @@
                             <div class="portfolio-details-slider swiper-container">
                                 <div class="photo-slide swiper-wrapper">
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/Leche de coco - Stand/cocoStan-01.png" alt="">
+                                        <img src="../img/Portfolio/coconut/Leche de coco - Stand/cocoStan-01.png" alt="Detalle de exibidor para leche de coco Celebes">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/Leche de coco - Stand/cocoStan-02.png" alt="">
+                                        <img src="../img/Portfolio/coconut/Leche de coco - Stand/cocoStan-02.png" alt="Exibidor para leche de coco Celebes">
                                     </div>                    
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/Leche de coco - Stand/cocoStan-03.png" alt="">
+                                        <img src="../img/Portfolio/coconut/Leche de coco - Stand/cocoStan-03.png" alt="Detalle de frente del Exibidor para leche de coco Celebes">
                                     </div>                    
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/Leche de coco - Stand/cocoStan-04.png" alt="">
+                                        <img src="../img/Portfolio/coconut/Leche de coco - Stand/cocoStan-04.png" alt="Exibidor para leche de coco Celebes">
                                     </div>                                                                       
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/Leche de coco - Stand/cocoStan-05.png" alt="">
+                                        <img src="../img/Portfolio/coconut/Leche de coco - Stand/cocoStan-05.png" alt="Exibidor para leche de coco Celebes sin productos">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/coconut/Leche de coco - Stand/cocoStan-06.png" alt="">
+                                        <img src="../img/Portfolio/coconut/Leche de coco - Stand/cocoStan-06.png" alt="Vista superior de Exibidor para leche de coco Celebes">
                                     </div>
                                 </div>
                                 <div class="swiper-pagination"></div>
