--- a/Espanol/cva-ES.html
+++ b/Espanol/cva-ES.html
@@ -158,7 +158,7 @@
 
                 <div class="portfolio-EN gallery-image">
                     <div class="each-item">
-                        <img class="port-image" src="../img/Portfolio/cva/metalDesign/Metal-01.png" alt="3D product design of a metal box"/>
+                        <img class="port-image" src="../img/Portfolio/cva/metalDesign/Metal-01.png" alt="Modelado parametrico de una caja metalica"/>
                         <div class="cap1">
                             <h3 class="h3-mob">Diseño en metal</h3>
                             <p class="p-mob">Corte laser y plegado en CNC</p>
@@ -170,7 +170,7 @@
                 </div>
                 <div class="portfolio-EN gallery-image">
                     <div class="each-item">
-                        <img class="port-image" src="../img/Portfolio/cva/exibition/Stand1-01.png" alt="Automechanika exibition Buenos Aires 2017/">
+                        <img class="port-image" src="../img/Portfolio/cva/exibition/Stand1-01.png" alt="Stan exibidor para Automechanika en Buenos Aires 2017">
                         <div class="cap1">
                             <h3 class="h3-mob">Automechanika 2017</h3>
                             <p class="p-mob">Stand exibidor</p>
@@ -182,7 +182,7 @@
                 </div>
                 <div class="portfolio-EN gallery-image">
                     <div class="each-item">
-                        <img class="port-image" src="../img/Portfolio/cva/3dmodel/3D-08.png" alt="3D Modeling of a car suspension wheel">
+                        <img class="port-image" src="../img/Portfolio/cva/3dmodel/3D-08.png" alt="modelado 3d de detecto de holguras">
                         <div class="cap1">
                             <h3 class="h3-mob">3D Drawing</h3>
                             <p class="p-mob">Modelado 3D y rendizado</p>
