--- a/Espanol/cva3D-ES.html
+++ b/Espanol/cva3D-ES.html
@@ -158,34 +158,34 @@
                             <div class="portfolio-details-slider swiper-container">
                                 <div class="photo-slide swiper-wrapper">
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/cva/3dmodel/3D-08.png" alt="3Dmodels of wheel suspension">
+                                        <img src="../img/Portfolio/cva/3dmodel/3D-08.png" alt="Detalle de detector de holguras">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/cva/3dmodel/3D-01.png" alt="3Dmodels of Consol ">
+                                        <img src="../img/Portfolio/cva/3dmodel/3D-01.png" alt="consola para diagnostico">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/cva/3dmodel/3D-02.png" alt="3Dmodels of Tacometer">
+                                        <img src="../img/Portfolio/cva/3dmodel/3D-02.png" alt="despiece de tacomentro">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/cva/3dmodel/3D-03.png" alt="3Dmodels of wheel">
+                                        <img src="../img/Portfolio/cva/3dmodel/3D-03.png" alt="carro para ruedas">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/cva/3dmodel/3D-05.png" alt="3Dmodels of wheel suspension">
+                                        <img src="../img/Portfolio/cva/3dmodel/3D-05.png" alt="Detalle de carro para gomas">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/cva/3dmodel/3D-06.png" alt="3Dmodels of wheel suspension ">
+                                        <img src="../img/Portfolio/cva/3dmodel/3D-06.png" alt="Detalle de detector de holguras">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/cva/3dmodel/3D-07.png" alt="3Dmodels of wheel suspension">
+                                        <img src="../img/Portfolio/cva/3dmodel/3D-07.png" alt="sistema de diagnotico para motovehiculos">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/cva/3dmodel/3D-11.png" alt="3Dmodels of a factory Workstation">
+                                        <img src="../img/Portfolio/cva/3dmodel/3D-11.png" alt="modelado de espaciod de trabajo">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/cva/3dmodel/3D-09.png" alt="3Dmodels of Workstation for car checking">
+                                        <img src="../img/Portfolio/cva/3dmodel/3D-09.png" alt="Renderr de taller de verificacion Vehicular">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/cva/3dmodel/3D-10.png" alt="3Dmodels of Workstation for car checking">
+                                        <img src="../img/Portfolio/cva/3dmodel/3D-10.png" alt="Render de taller de verificacion Vehicular">
                                     </div>                                  
                                 </div>
                                 <div class="swiper-pagination"></div>
