--- a/Espanol/cvaMetal-ES.html
+++ b/Espanol/cvaMetal-ES.html
@@ -158,31 +158,31 @@
                             <div class="portfolio-details-slider swiper-container">
                                 <div class="photo-slide swiper-wrapper">                                    
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/cva/metalDesign/Render caja chata.10.png" alt="Metal box design">
+                                        <img src="../img/Portfolio/cva/metalDesign/Render caja chata.10.png" alt="Diseno de cajca metalica">
                                     </div>                                                       
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/cva/metalDesign/Estaneria JAVI.png" alt="Metal shelf design">
+                                        <img src="../img/Portfolio/cva/metalDesign/Estaneria JAVI.png" alt="modelado de estanteria metalic">
                                     </div> 
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/cva/metalDesign/CARRO MOTORES.png" alt="Metal trollies for engines">
+                                        <img src="../img/Portfolio/cva/metalDesign/CARRO MOTORES.png" alt="carro metalico para motores">
                                     </div>              
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/cva/metalDesign/Mesa alta.1.png" alt="Metal table design">
+                                        <img src="../img/Portfolio/cva/metalDesign/Mesa alta.1.png" alt="mesa alta de trabajo en metal">
                                     </div>                    
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/cva/metalDesign/Mesa alta.2.png" alt="Metal table design - pieces">
+                                        <img src="../img/Portfolio/cva/metalDesign/Mesa alta.2.png" alt="Mesa alta de trabajo en metal">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/cva/metalDesign/mesa baja.41.png" alt="Metal table design">
+                                        <img src="../img/Portfolio/cva/metalDesign/mesa baja.41.png" alt= "mesa baja de trabajo ">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/cva/metalDesign/untitled.59.png" alt="dies to expedite the assembly of parts.">
+                                        <img src="../img/Portfolio/cva/metalDesign/untitled.59.png" alt="ensamblaje de partes">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/cva/metalDesign/untitled.61.png" alt="dies to expedite the assembly of parts.">
+                                        <img src="../img/Portfolio/cva/metalDesign/untitled.61.png" alt="modelo para ensamblaje de partes">
                                     </div>
                                     <div class="swiper-slide">
-                                        <img src="../img/Portfolio/cva/metalDesign/malacarejpg.18.png" alt="dies to expedite the assembly of parts.">
+                                        <img src="../img/Portfolio/cva/metalDesign/malacarejpg.18.png" alt="modelo para ensamblaje de partes">
                                     </div>
                                 </div>
                                 <div class="swiper-pagination"></div>
