--- a/Espanol/index-ES.html
+++ b/Espanol/index-ES.html
@@ -240,7 +240,7 @@
                                             <p>Desarrollo de limpiavidrios</p>
                                         </div>
                                         <div class="cap2">
-                                            <a href="vertigo-EN.html" ><p class="text-center">Leer mas</p></a>
+                                            <a href="../Espanol/vertigo-ES.html" ><p class="text-center">Leer mas</p></a>
                                         </div>
                                 </div>
                             </div>
@@ -255,7 +255,7 @@
                                         <p>Diseño y presentacion de bicicletero para Montevideo (Uruguay)</p>
                                     </div>
                                     <div class="cap2">
-                                        <a href="bikes-EN.html" class="text-center"><p class="text-center">Leer mas</p></a>
+                                        <a href="../Espanol/bikes-ES.html" class="text-center"><p class="text-center">Leer mas</p></a>
                                     </div>
                                 </div>
                             </div>
@@ -271,7 +271,7 @@
                                         <p>Solidworks& Keyshot</p>
                                     </div>
                                     <div class="cap2">
-                                        <a href="renders-EN.html" class="text-center"><p class="text-center">Leer mas</p></a>
+                                        <a href="../Espanol/renders-ES.html" class="text-center"><p class="text-center">Leer mas</p></a>
                                     </div>
                                 </div>
                             </div>
@@ -286,7 +286,7 @@
                                         <p>Corte laser y plegado CNC</p>
                                     </div>
                                     <div class="cap2">
-                                        <a href="cvaMetal-EN.html" class="text-center"><p class="text-center">Leer mas</p></a>
+                                        <a href="../Espanol/cvaMetal-ES.html" class="text-center"><p class="text-center">Leer mas</p></a>
                                     </div>
                                 </div>
                             </div>
@@ -301,7 +301,7 @@
                                         <p class="p-mob">Diseño de exibido de stan</p>
                                     </div>
                                     <div class="cap2">
-                                        <a href="cvaStand-EN.html" class="text-center"><p class="text-center">Leer mas</p></a>
+                                        <a href="../Espanol/cvaStand-ES.html" class="text-center"><p class="text-center">Leer mas</p></a>
                                     </div>
                                 </div>
                             </div>
@@ -316,7 +316,7 @@
                                         <p>Diseño y desarrollo de packaging</p>
                                     </div>
                                     <div class="cap2">
-                                        <a href="coco-EN.html" class="text-center"><p class="text-center">Leer mas</p></a>
+                                        <a href="../Espanol/coco-ES.html" class="text-center"><p class="text-center">Leer mas</p></a>
                                     </div>
                                 </div>
                             </div>
@@ -331,7 +331,7 @@
                                         <p>Modelados 3D & Renders</p>
                                     </div>
                                     <div class="cap2">
-                                        <a href="cva3D-EN.html" class="text-center"><p class="text-center">Leer mas</p></a>
+                                        <a href="../Espanol/cva3D-ES.html" class="text-center"><p class="text-center">Leer mas</p></a>
                                     </div>
                                 </div>
                             </div>
@@ -346,7 +346,7 @@
                                         <p>Mochila porta bebes</p>
                                     </div>
                                     <div class="cap2">
-                                        <a href="upa-EN.html"  class="text-center"><p class="text-center">Leer mas</p></a>
+                                        <a href="../Espanol/upa-ES.html"  class="text-center"><p class="text-center">Leer mas</p></a>
                                     </div>
                                 </div>
                             </div>
@@ -361,7 +361,7 @@
                                         <p class="p-mob">Deshidaratadora de frutas</p>
                                     </div>
                                     <div class="cap2">
-                                        <a href="dandii-EN.html" class="text-center"><p class="text-center">Leer mas</p></a>
+                                        <a href="../Espanol/dandii-ES.html" class="text-center"><p class="text-center">Leer mas</p></a>
                                     </div>
                                 </div>
                             </div>
@@ -376,7 +376,7 @@
                                         <p>Puestos de trabajo con diseño Knoll</p>
                                     </div>
                                     <div class="cap2">
-                                        <a href="interieur-EN.html" class="text-center"><p class="text-center">Leer mas</p></a>
+                                        <a href="../Espanol/interieur-ES.html" class="text-center"><p class="text-center">Leer mas</p></a>
                                     </div>
                                 </div>
                             </div>
@@ -391,7 +391,7 @@
                                         <p>Diseño de stand</p>
                                     </div>
                                     <div class="cap2">
-                                        <a href="coco-EN.html" class="text-center"><p class="text-center">Leer mas</p></a>
+                                        <a href="../Espanol/coco-ES.html" class="text-center"><p class="text-center">Leer mas</p></a>
                                     </div>
                                 </div>
                             </div>
