--- a/Italiano/index-IT.html
+++ b/Italiano/index-IT.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,18 +22,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     
     <!--SEO-->
-    <meta name="description" content="Soy Sole, diseñadora industrial. Creativa, apacionada por la investigacion y el desarrollo de productos, amante del modelado 3D. Introduciendome en el mundo de Front End y UX/UI.">
-    <meta name="keywords" content="Diseño Industrial, diseño de producto, development, UX, UI, modelado 3D, web development, portfolio, front end">
+    <meta name="description" content="Sono Sole, un designer industriale. Creativa, appassionata di ricerca e sviluppo prodotto, amante della modellazione 3D. Mi presento al mondo di Front End e UX / UI.">
+    <meta name="keywords" content="Design industriale, design del prodotto, sviluppo, UX, UI, modellazione 3D, sviluppo web, portfolio, front end">
     <meta name="author" content="Soledad Priano">
     <meta name="copyright" content="Soledad Priano">
 
     <!--Open graph-->
     <meta property="og:title" content="Soledad Priano Portfolio">
-    <meta property="og:descripcion" content="Diseñadora industrial: Creativa, apacionada por la investigacion y el desarrollo de productos, amante del modelado 3D. Introduciendome en el mundo de Front End y UX/UI.">
+    <meta property="og:descripcion" content="Designer industriale: Creativo, appassionato di ricerca e sviluppo prodotto, amante della modellazione 3D. Mi presento al mondo di Front End e UX / UI.">
     <meta property="og:imagen" content="../img/icons/Icon-web.svg">
     <meta property="og:url" content="https://solep.github.io/Portfolio/index.html">
     <meta property="og:type" content="website">
-    <meta property="og:locale" content="es_ES">
+    <meta property="og:locale" content="es_IT">
     
     <!--FAVICON-->
     <link rel="shortcut icon" href="../img/icons/Icon-web.svg" type="image/x-icon">
@@ -129,7 +129,7 @@
     <main id="home">
         <!--=========Encabezado=========-->
         <section  id="title" class="title container-fluid bg-light">
-            <h1 class="name"><img class="img-fluid" src="../img/design.svg" alt="Modelado 3D de Deshitradadora de Fruta">
+            <h1 class="name"><img class="img-fluid" src="../img/design.svg" alt="Al momento sto lavorando sul web. Presto potrai leggerlo nella tua lingua">
             </h1>
             <h2 class="subName"></h2>
         </section>
