--- a/Italiano/vertigoTV-IT.html
+++ b/Italiano/vertigoTV-IT.html
@@ -20,25 +20,20 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-
-    <!-- Vendor CSS Files -->
-    <link href="../assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-    <link href="../assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
     
     <!--SEO-->
-    <meta name="description" content="Soy Sole, diseñadora industrial. Creativa, apacionada por la investigacion y el desarrollo de productos, amante del modelado 3D. Introduciendome en el mundo de Front End y UX/UI.">
-    <meta name="keywords" content="Diseño Industrial, diseño de producto, development, UX, UI, modelado 3D, web development, portfolio, front end">
+    <meta name="description" content="Sono Sole, un designer industriale. Creativa, appassionata di ricerca e sviluppo prodotto, amante della modellazione 3D. Mi presento al mondo di Front End e UX / UI.">
+    <meta name="keywords" content="Design industriale, design del prodotto, sviluppo, UX, UI, modellazione 3D, sviluppo web, portfolio, front end">
     <meta name="author" content="Soledad Priano">
     <meta name="copyright" content="Soledad Priano">
 
     <!--Open graph-->
     <meta property="og:title" content="Soledad Priano Portfolio">
-    <meta property="og:descripcion" content="Diseñadora industrial: Creativa, apacionada por la investigacion y el desarrollo de productos, amante del modelado 3D. Introduciendome en el mundo de Front End y UX/UI.">
+    <meta property="og:descripcion" content="Designer industriale: Creativo, appassionato di ricerca e sviluppo prodotto, amante della modellazione 3D. Mi presento al mondo di Front End e UX / UI.">
     <meta property="og:imagen" content="../img/icons/Icon-web.svg">
     <meta property="og:url" content="https://solep.github.io/Portfolio/index.html">
     <meta property="og:type" content="website">
-    <meta property="og:locale" content="es_ES">
+    <meta property="og:locale" content="es_IT">
     
     <!--FAVICON-->
     <link rel="shortcut icon" href="../img/icons/Icon-web.svg" type="image/x-icon">
@@ -59,14 +54,14 @@
                         <img src="../img/icons/lang.png" alt="Icono de Lenguaje" class="" with="30" height="30">
                     </a>
                     <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdownMenuLang">
-                        <li><a class="dropdown-item" href="vertigoTV-ES.html">Español</a></li>
+                        <li><a class="dropdown-item" href="../Espanol/vertigoTV-ES.html">Español</a></li>
                         <li><a class="dropdown-item" href="../vertigoTV-EN.html">English</a></li>
                         <li><a class="dropdown-item" href="../Italiano/vertigoTV-IT.html">Italian</a></li>
                     </ul>
                 </div>
                 <!--Language Change Movile-->
                 <div class="lang-movil" id="lang-movil">
-                    <li><a class="dropdown-item" href="vertigoTV-ES.html">ES</a></li>
+                    <li><a class="dropdown-item" href="../Espanol/vertigoTV-ES.html">ES</a></li>
                     <li><a class="dropdown-item" href="../vertigoTV-EN.html">EN</a></li>
                     <li><a class="dropdown-item" href="../Italiano/vertigoTV-IT.html">IT</a></li>
                 </div>
@@ -134,7 +129,7 @@
     <main id="home">
         <!--=========Encabezado=========-->
         <section  id="title" class="title container-fluid bg-light">
-            <h1 class="name"><img class="img-fluid" src="../img/design.svg" alt="Modelado 3D de Deshitradadora de Fruta">
+            <h1 class="name"><img class="img-fluid" src="../img/design.svg" alt="Al momento sto lavorando sul web. Presto potrai leggerlo nella tua lingua">
             </h1>
             <h2 class="subName"></h2>
         </section>
