--- a/Espanol/about-ES.html
+++ b/Espanol/about-ES.html
@@ -146,7 +146,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6">
-                            <img src="../img/me.jpg" class="img-fluid" alt="">
+                            <img src="../img/me.jpg" class="img-fluid" alt="Fotografia superio de una persona pisando un tronco">
                         </div>
                         <div class="col-lg-6">
                             <h3>Un poco de mi</h3>
