--- a/Italiano/cva-IT.html
+++ b/Italiano/cva-IT.html
@@ -22,18 +22,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
     
     <!--SEO-->
-    <meta name="description" content="Soy Sole, diseñadora industrial. Creativa, apacionada por la investigacion y el desarrollo de productos, amante del modelado 3D. Introduciendome en el mundo de Front End y UX/UI.">
-    <meta name="keywords" content="Diseño Industrial, diseño de producto, development, UX, UI, modelado 3D, web development, portfolio, front end">
+    <meta name="description" content="Sono Sole, un designer industriale. Creativa, appassionata di ricerca e sviluppo prodotto, amante della modellazione 3D. Mi presento al mondo di Front End e UX / UI.">
+    <meta name="keywords" content="Design industriale, design del prodotto, sviluppo, UX, UI, modellazione 3D, sviluppo web, portfolio, front end">
     <meta name="author" content="Soledad Priano">
     <meta name="copyright" content="Soledad Priano">
 
     <!--Open graph-->
     <meta property="og:title" content="Soledad Priano Portfolio">
-    <meta property="og:descripcion" content="Diseñadora industrial: Creativa, apacionada por la investigacion y el desarrollo de productos, amante del modelado 3D. Introduciendome en el mundo de Front End y UX/UI.">
+    <meta property="og:descripcion" content="Designer industriale: Creativo, appassionato di ricerca e sviluppo prodotto, amante della modellazione 3D. Mi presento al mondo di Front End e UX / UI.">
     <meta property="og:imagen" content="../img/icons/Icon-web.svg">
     <meta property="og:url" content="https://solep.github.io/Portfolio/index.html">
     <meta property="og:type" content="website">
-    <meta property="og:locale" content="es_ES">
+    <meta property="og:locale" content="es_IT">
     
     <!--FAVICON-->
     <link rel="shortcut icon" href="../img/icons/Icon-web.svg" type="image/x-icon">
@@ -54,14 +54,14 @@
                         <img src="../img/icons/lang.png" alt="Icono de Lenguaje" class="" with="30" height="30">
                     </a>
                     <ul class="dropdown-menu dropdown-menu-dark bg-dark" aria-labelledby="navbarDropdownMenuLang">
-                        <li><a class="dropdown-item" href="cva-ES.html">Español</a></li>
+                        <li><a class="dropdown-item" href="../Espanol/cva-ES.html">Español</a></li>
                         <li><a class="dropdown-item" href="../cva-EN.html">English</a></li>
                         <li><a class="dropdown-item" href="../Italiano/cva-IT.html">Italian</a></li>
                     </ul>
                 </div>
                 <!--Language Change Movile-->
                 <div class="lang-movil" id="lang-movil">
-                    <li><a class="dropdown-item" href="cva-ES.html">ES</a></li>
+                    <li><a class="dropdown-item" href="../Espanol/cva-ES.html">ES</a></li>
                     <li><a class="dropdown-item" href="../cva-EN.html">EN</a></li>
                     <li><a class="dropdown-item" href="../Italiano/cva-IT.html">IT</a></li>
                 </div>
